implement custom option feature

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,3 +31,11 @@ nav.navbar { border-radius: 0; }
 .poll-data-container {
     display:inline-block;
 }
+
+button.poll-data {
+    margin-bottom: 5px;
+}
+
+.userinput {
+    display: none;
+}
